# lavaplayer

./: build.gradle.kts  jitpack.yml  settings.gradle.kts
.github/workflows/: build-natives.yml  build.yml  release.yml  test-natives.yml
main/: build.gradle.kts
main/src/test/groovy/com/sedmelluq/discord/lavaplayer/natives/: NativeSmokeSpec.groovy
main/src/test/java/com/sedmelluq/discord/lavaplayer/natives/: NativeSmokeTest.java
natives/: .gitignore  build.gradle  build.gradle.kts
natives-publish/src/main/resources/natives/darwin/: libconnector.dylib
natives-publish/src/main/resources/natives/darwin-aarch64/: libconnector.dylib
natives-publish/src/main/resources/natives/darwin-x86-64/: libconnector.dylib
natives/connector/: CMakeLists.txt  samplerate.c
natives/samplerate/: CMakeLists.txt
natives/scripts/: build-linux-deps.sh
natives/src/main/resources/natives/darwin/: libconnector.dylib
natives/vorbis/: CMakeLists.txt
