cmake_minimum_required(VERSION 3.10)
project(connector C)

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
	include_directories("$ENV{JAVA_HOME}/include/win32")
	set(SYSNAME "win")
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
	include_directories("$ENV{JAVA_HOME}/include/linux")
	set(SYSNAME "linux")
else()
	include_directories("$ENV{JAVA_HOME}/include/darwin")
	set(SYSNAME "darwin")
endif()

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	add_definitions(-Dinline=__inline)

	set(COMPILER_FLAGS "")
	set(COMPILER_FLAGS_DEBUG "/MTd")
	set(COMPILER_FLAGS_RELEASE "/Ox /MT")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(COMPILER_FLAGS "-fvisibility=hidden")
	set(COMPILER_FLAGS_DEBUG "-g")
	set(COMPILER_FLAGS_RELEASE "-O3 -DNDEBUG")
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dead_strip")
else()
	set(COMPILER_FLAGS "-Wall -Wextra -Werror -Wno-unused-parameter -Wno-unused-function -fvisibility=hidden")
	set(COMPILER_FLAGS_DEBUG "-g")
	set(COMPILER_FLAGS_RELEASE "-O3 -DNDEBUG")
	# --exclude-libs,ALL is GNU ld only; lld (Windows cross, musl/Zig) does not support it
	if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
		set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections -Wl,--exclude-libs,ALL -Wl,--strip-all")
	else()
		set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections -Wl,--strip-all")
	endif()
endif()

set(CMAKE_C_FLAGS_DEBUG "${COMPILER_FLAGS} ${COMPILER_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_RELEASE "${COMPILER_FLAGS} ${COMPILER_FLAGS_RELEASE}")
set(CMAKE_CXX_FLAGS_DEBUG "${COMPILER_FLAGS} ${COMPILER_FLAGS_DEBUG}")
set(CMAKE_CXX_FLAGS_RELEASE "${COMPILER_FLAGS} ${COMPILER_FLAGS_RELEASE}")

include_directories("$ENV{JAVA_HOME}/include/")

# Read versions from versions.properties
file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/../versions.properties" VERSION_LINES)
foreach(LINE ${VERSION_LINES})
    if(LINE MATCHES "^([^#=]+)=(.+)$")
        string(TOUPPER "${CMAKE_MATCH_1}" KEY)
        string(STRIP "${CMAKE_MATCH_2}" VALUE)
        set(VERSION_${KEY} "${VALUE}")
    endif()
endforeach()

include_directories("${samplerate_SOURCE_DIR}/include")
include_directories("../opus/opus-${VERSION_OPUS}/include")
include_directories("../fdk-aac/libAACdec/include")
include_directories("../fdk-aac/libSYS/include")
include_directories("../vorbis/libvorbis-${VERSION_VORBIS}/include")
include_directories("../vorbis/libogg-${VERSION_OGG}/include")
link_directories("../libs/64")

if (DEFINED ENV{DIST_DIR})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "$ENV{DIST_DIR}")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "$ENV{DIST_DIR}")
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	add_library(connector SHARED samplerate.c fdk-aac.c vorbis.c opus.c mpg123.c)
else()
        add_library(connector SHARED samplerate.c fdk-aac.c vorbis.c opus.c mpg123.c ${SYSNAME}/statistics.c)
endif()

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
	# Output connector.dll, not libconnector.dll (MinGW adds lib prefix by default)
	set_target_properties(connector PROPERTIES PREFIX "")
	# mpg123 uses PathIsRelativeW/PathIsUNCW/PathCombineW from shlwapi.dll
	target_link_libraries(connector samplerate fdk-aac vorbis ogg opus mpg123 shlwapi)
else()
	target_link_libraries(connector samplerate fdk-aac vorbis ogg opus mpg123)
endif()
